2011-05-09  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (get_daemon_options): Rename parameter daemonize to
	daemon_options.  Only handle --internal-log-dir and --internal-pid-dir
	if daemon_options is True.  All users updated.

	* config/server.conf (database-path): Fix default value.

	* src/utils.py (get_daemon_options): Add --internal-pid-dir.
	(create_pid_file, delete_pid_file): New parameter options.  All users
	updated.

	* src/bridge.py (main)
	* src/server.py (main): Remove the unused possibility to disable logging
	to a file, by editing settings.py.

	* src/utils.py (get_daemon_options): Add --internal-log-dir.
	* src/server.py (main)
	* src/bridge.py (main): Reflect --internal-log-dir, overriding
	settings.log_dir.

2011-05-06  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (request_handling_child): Log errors when opening the
	database instead of silently discarding them.

	* src/client.py (SignRPMsReplyThread._real_run): Immediately report
	successful subrequests in verbose mode.

	* src/bridge.py (bridge_one_request): Log more information on NSPRError.

2011-02-01  Miloslav Trmač  <mitr@redhat.com>

	* README: Add numerical identifiers to command sequences to disambiguate
	"see above" references.

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_URL.

2010-05-27  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (_CombiningBuffer.__init__)
	(_InnerBridgingBuffer.__init__): New member __buffer_dropped.
	(_SplittingBuffer.__init__): New members __inner_buffer_dropped and
	__outer_buffer_dropped.
	(_CombiningBuffer._handle_errors, _SplittingBuffer._handle_errors)
	(_InnerBridgingBuffer._handle_errors): Don't flood the logs with "data
	dropped" messages.

	* src/double_tls.py (_id): Handle more than 26 objects (more than (255
	- ord('A')) to be precise).

2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (ServerConfiguration._add_defaults): New option
	signing-timeout.